Added more content to Little Library

--- a/Week 14 - Little Library Example/LittleLibrary/LittleLibrary.csproj
+++ b/Week 14 - Little Library Example/LittleLibrary/LittleLibrary.csproj
@@ -52,6 +52,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="Accounts\" />
     <Folder Include="Books\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
